fixed changed wrong coloring

--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 body {
     background: url('http://www.wagamama.com/~/media/WagamamaMainsite/hero-pod-images/omakase.jpg') no-repeat;
-    color: #fff;
+    color: #000;
 }
 
 .navbar-text {
@@ -61,7 +61,7 @@ h2 {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #000;
+    background-color: #fff;
 }
 
 .navbar-toggle .icon-bar {
